# homelab

./: .ansible-lint  .pre-commit-config.yaml  .yamllint  README.md
.github/: renovate.json
ansible/: ansible.cfg  base-setup.yml  initial-inventory.yml  initial-setup.yml  inventory.yml  k3s.yml  k8s.yml  printserver.yml  pyproject.toml  requirements.yml  rke2.yml  site.yml  storage-setup.yml  tooling.yml  upgrade-packages.yml
ansible/roles/apt/defaults/: main.yml
ansible/roles/apt/tasks/: main.yml
ansible/roles/apt/templates/: mirrors.list
ansible/roles/bluetooth/tasks/: main.yml
ansible/roles/cleanup_bootstrap_user/tasks/: main.yml
ansible/roles/cups/defaults/: main.yml
ansible/roles/cups/handlers/: main.yml
ansible/roles/cups/tasks/: main.yml
ansible/roles/docker_runtime/tasks/: main.yml
ansible/roles/general/tasks/: main.yml
ansible/roles/hardening/tasks/: main.yml
ansible/roles/hplip/defaults/: main.yml
ansible/roles/hplip/tasks/: main.yml
ansible/roles/longhorn/tasks/: main.yml
ansible/roles/luks_storage/defaults/: main.yml
ansible/roles/luks_storage/tasks/: main.yml
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/poe_plus_hat/tasks/: main.yml
ansible/roles/raspi_cgroups/defaults/: main.yml
ansible/roles/raspi_cgroups/handlers/: main.yml
ansible/roles/raspi_cgroups/tasks/: main.yml
ansible/roles/server_user/defaults/: main.yml
ansible/roles/server_user/tasks/: main.yml
ansible/roles/tooling/tasks/: main.yml
helmfile/: apply_all
image_build/: .gitignore  Vagrantfile  build.sh  build_debian.sh  preseed.cfg  (+3 more)
(+290 files in other folders)
