[tool.poetry]
name = "ansible-setup"
version = "0.1.0"
description = ""
authors = ["dezeroku <contact@dezeroku.com>"]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.3.0"
passlib = "^1.7.4"
kubernetes = "^32.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
